# eolabs

./: .gitignore  Lab_5_Browser.py  go.mod  pyproject.toml
SAR_Lab_1/: Lab_1.SAR_urban_development.ipynb
SAR_Lab_2/: SAR_Lab_2.ipynb
github-downloader/: README.md  downloader.go  go.mod  main.go
lab_1/: README.md  Untitled.ipynb  aral_comparison.ipynb  environment.yml  pyproject.toml  requirements.txt
lab_2/: aral_lab_2.ipynb
lab_3/: deforestation.ipynb  gitignore.txt
lab_4/: main.py  pyproject.toml  test_fix.py
lab_4/notebooks/: fire_detection.ipynb
lab_5/: .gitignore  HSB_README.md  algi.ipynb  algi2.ipynb  chat_test.py  ex_1_tool.py  ex_3.ipynb  ex_4.ipynb  generate_test_cube.py  get_bbox.py  hyperspec_analysis.ipynb  hyperspec_tool.py  hyperspectral_browser.py  lab4_task3.ipynb  main.py  pyproject.toml  requirements.txt  sam_calibration.ipynb  spectral_analysis.ipynb  spectral_library.csv  viewer.py  viewer_zad_2.py
lab_5/fields_sp/: spectrum_221000_Odra_HS_Blok_A_008_VS_join_atm_col1379_row2310.csv  spectrum_221000_Odra_HS_Blok_A_008_VS_join_atm_col1478_row4114.csv  spectrum_221000_Odra_HS_Blok_A_008_VS_join_atm_col222_row723.csv  spectrum_221000_Odra_HS_Blok_A_008_VS_join_atm_col649_row98.csv  spectrum_221000_Odra_HS_Blok_A_013_VS_join_atm_col1118_row1516.csv  spectrum_221000_Odra_HS_Blok_A_013_VS_join_atm_col1446_row1230.csv  spectrum_221000_Odra_HS_Blok_A_013_VS_join_atm_col214_row1079.csv  spectrum_221000_Odra_HS_Blok_A_013_VS_join_atm_col874_row1145.csv  spectrum_221000_Odra_HS_Blok_A_015_VS_join_atm_col177_row2323.csv  (+2 more)
(+888 files in other folders)
