[project]
name = "eolabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "planetary-computer>=1.0.0",
    "pydotplus>=2.0.2",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "dummy",
    "lab_5",
]
