[project]
name = "lab-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "leafmap>=0.61.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pyorbital>=1.12.1",
    "pyproj>=3.7.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]
